style.css
@font-face {
  font-family: 'MyWebFont';
  src: url('https://www.myfonts.com/fonts/urtd/pexico/regular/'); 
}

* {
  box-sizing: border-box;
  margin: 0;
  font-family: 'MyWebFont';
}

body {
  background: #000;
}

header video {
  width: 100%;
}

.container {
  margin: 0 120px;
}

#logo {
  height: 50px;
  position: absolute;
  top: 51px;
  left: 120px;
}

.container {
  width: calc(100% - 240px);
}

header .container {
  position: absolute;
  top: 170px;
}

.last-updated {
  padding: 15px 0 0;
  margin: 10px 0;
  color: #fff;
  text-shadow: 
  -1px 0px 0 rgba(169, 0, 255, 1),
  -2px 0px 0 rgba(16, 10, 255, 1);
}

.search-bar {
  width: 100%;
  height: 30px;
  border: transparent;
  border-style: double;
  padding: 0;
  margin: 0;
  outline: none;
  background-color: #000;
}

.search-form {
  position: relative;
}

.search-form:after, .search-form:before {
  content: '';
  position: absolute;
  display: block;
  background: #fff;
  width: 100%;
  height: 2px;
  top: 0; 
  box-shadow: 
  -2px 2px 0 rgba(169, 0, 255, 1),
  -4px 2px 0 rgba(16, 10, 255, 1), 
  2px 2px 0 rgba(255, 0, 105, 1);
}

.search-form:after {
  top: unset;
  bottom: 0;
}

main .container {
  margin-top: 20px;
  display: grid;
  grid-gap: 15px;
  grid-template-columns: 252px auto; 
  grid-auto-rows: 300px;
  grid-template-areas: 
    "a b"
    "a b"
    "a b";
  align-items: start;
} 

.checkbox-container {
  grid-area: a;
}

.checkbox {
  display: block;
}

label {
  color: #fff;
}

/* ................. */

input{font-size:1em;}

ol.tree{padding-left:22px;}

li{
  list-style-type:none;
  color:#fff;
  position:relative;
  margin-left:-15px;
}

li label{
  padding-left:12px;
  cursor:pointer;
  display:block;
}

li input{
  width:1em;
  height:1em;
  position:absolute;
  left:-0.5em;
  top:0;
  /* opacity:0; */
  cursor:pointer;
}

li input + ol > li{
  display:none;
  margin-left:-14px !important;
  padding-left:1px
}

li input:checked + ol{
  height:auto;
  margin:-21px 0 0 -44px;
  padding:25px 0 0 80px;
  background:url("https://www.thecssninja.com/demo/css_tree/toggle-small.png") no-repeat 40px 5px;
}

li input:checked + ol > li{
  display:block;
  margin:0 0 0.063em;
}

li input:checked + ol > li:first-child{
  margin:0 0 0.125em;
}


@media only screen and (max-width: 1024px) {
    header video {
      display: none;
    }

    header .background-image {
      display: block;
      background-image:url('./assets/Images/vv-grid-bg.jpg');
      width: 100%;
    }
}

